Fix article list wrapping

--- a/assets/_sass/components/_list-article.scss
+++ b/assets/_sass/components/_list-article.scss
@@ -18,6 +18,7 @@
 .list-article-title {
 	display: table-cell;
 	padding: .25em 0;
+	vertical-align: top;
 }
 
 .list-article-label {
